# SDC-AI-LectureNotes

c++/youngchanhwang/: CMakeLists.txt  main.cpp
c++/youngchanhwang/account/controller/: AccountController.cpp  AccountController.h
c++/youngchanhwang/account/controller/request/: AccountLoginRequestForm.h  AccountRegisterRequestForm.cpp  AccountRegisterRequestForm.h
c++/youngchanhwang/account/controller/response/: AccountLoginResponseForm.cpp  AccountLoginResponseForm.h  AccountRegisterResponseForm.cpp  AccountRegisterResponseForm.h
c++/youngchanhwang/account/entity/: Account.h
c++/youngchanhwang/account/repository/: AccountRepository.h  AccountRepositoryImpl.cpp  AccountRepositoryImpl.h
c++/youngchanhwang/account/service/: AccountService.h  AccountServiceImpl.cpp  AccountServiceImpl.h
c++/youngchanhwang/account/service/request/: AccountLoginRequest.cpp  AccountLoginRequest.h  AccountRegisterRequest.cpp  AccountRegisterRequest.h  AccountRequestLogin.h
c++/youngchanhwang/account/service/response/: AccountLoginResponse.cpp  AccountLoginResponse.h  AccountRegisterResponse.h  AccountResponse.h
c++/youngchanhwang/mysql/: DbProcess.cpp  DbProcess.h
c++/youngchanhwang/singleton/: Singleton.h
c++/youngchanhwang/ui/console/get_keyinput/: keyinput.cpp  keyinput.h
c++/youngchanhwang/ui/console/window/: console_window.cpp  console_window.h
c/youngchanhwang/eleventh/: clangmun.c
c/youngchanhwang/eleventh/clangmun_func/: make_struct.c  make_struct.h
c/youngchanhwang/exception_test/sample/: exception.c  exception.h
c/youngchanhwang/exception_test/utility/: random.c
c/youngchanhwang/gtest_again/tests/how_to_use/: wanna_verify_some_functions.cpp
c/youngchanhwang/gtest_practice/: CMakeLists.txt  main.c
c/youngchanhwang/gtest_practice/tests/: add_test.cpp  sub_test.cpp
c/youngchanhwang/homework/board_test/: CMakeLists.txt  main.c
c/youngchanhwang/how_to_process_keyboard_input/: main.c
c/youngchanhwang/how_to_process_keyboard_input/ui/console/: user_keyboard_input.h
c/youngchanhwang/tests/gtet/: CMakeLists.txt
c/youngchanhwang/tests/gtet/ttest/: firsttest.cpp
c/youngchanhwang/thirteenth/: main.c
c/youngchanhwang/thirteenth/format_test/: form_test.h  make_file_from_format.c  make_format_from_file.c
python/youngchanhwang/: Untitled.ipynb  first.ipynb  second.ipynb  third.ipynb
python/youngchanhwang/answerUI/: main.py
python/youngchanhwang/answerUI/account_form/repository/: AccountFormRepository.py  AccountFormRepositoryImpl.py
python/youngchanhwang/answerUI/console_printer/repository/: ConsolePrinterRepositoryImpl.py
python/youngchanhwang/answerUI/console_ui/entity/: ConsoleUiRoutingState.py  ConsoleUiState.py  Session.py
python/youngchanhwang/answerUI/console_ui/repository/: ConsoleUiRepository.py  ConsoleUiRepositoryImpl.py
python/youngchanhwang/answerUI/console_ui/service/: ConsoleUiService.py  ConsoleUiServiceImpl.py
python/youngchanhwang/answerUI/custom_protocol/entity/: CustomProtocol.py
python/youngchanhwang/answerUI/custom_protocol/repository/: CustomProtocolRepository.py  CustomProtocolRepositoryImpl.py
python/youngchanhwang/answerUI/custom_protocol/service/: CustomProtocolService.py  CustomProtocolServiceImpl.py
python/youngchanhwang/answerUI/product_form/repository/: ProductFormRepository.py  ProductFormRepositoryImpl.py
python/youngchanhwang/answerUI/receiver/repository/: ReceiverRepositoryImpl.py
python/youngchanhwang/answerUI/request_generator/service/: RequestGeneratorService.py  RequestGeneratorServiceImpl.py
python/youngchanhwang/answerUI/tests/ugly/: TestUglyCode.py
python/youngchanhwang/answerUI/transmitter/repository/: TransmitterRepositoryImpl.py
python/youngchanhwang/first/pythonProject1/: main.py
(+8 files in other folders)
